# android-cpal-test

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/androidcpaltest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/androidcpaltest/: MainActivity.kt
app/src/main/java/com/example/androidcpaltest/rust/uniffi/androidcpaltest/: androidcpaltest.kt
app/src/main/java/com/example/androidcpaltest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/androidcpaltest/: ExampleUnitTest.kt
examples/: beep.rs
src/: androidcpaltest.udl  lib.rs
